# sanctum

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  compose.yml
cli/: Cargo.toml  README.md  cmd.md  justfile
cli/desktop/: Cargo.toml
cli/desktop/src/: main.rs
cli/src/: crypto.rs  error.rs  lib.rs  main.rs  onboarding.rs  password.rs  record.rs  remote.rs  storage.rs  sync.rs  vault.rs
pass/: Cargo.toml
pass/examples/: config.rs  simple.rs
pass/src/: client.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
pass/tests/: integration.rs
sanctum/: Cargo.toml
sanctum-client/: Cargo.toml
sanctum-client/src/: api.rs  auth.rs  client.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  outbox.rs  store.rs
sanctum-shared/: Cargo.toml
sanctum-shared/src/: lib.rs  login.rs  models.rs  register.rs  test.rs
sanctum-shared/tests/: basic_register_login.rs
sanctum-tui/: Cargo.toml
sanctum-tui/src/: auth.rs  config.rs  main.rs  vault.rs
sanctum/migrations/: 20251101154335_initial.down.sql  20251101154335_initial.up.sql
sanctum/src/: auth.rs  main.rs  middleware.rs  util.rs  vault.rs
