[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
hkdf = "0.13.0"
hmac = { version = "0.13.0", features = ["zeroize"] }
rand = "0.10.1"
rusqlite = "0.39.0"
sha2 = "0.11.0"
uuid = { version = "1.23.1", features = ["v4"] }
