[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sanctum"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
hex = "0.4.3"
hkdf = "0.13.0"
hmac = { version = "0.13.0", features = ["zeroize"] }
inquire = "0.9.4"
rand = "0.10.1"
rpassword = "7.5.2"
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
uuid = { version = "1.23.1", features = ["v4"] }
