[package]
name = "sanctum-client"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["derive"] }
sanctum-shared = { path = "../sanctum-shared" }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
thiserror = "2.0.17"
sled = "0.34"
secrecy = "0.10.3"
