[package]
name = "sanctum-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
opaque-ke = { version = "4.0.0", features = ["argon2", "ristretto255"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
